--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "edujugon/laradoo",
+    "name": "dootix-developer/laradoo",
     "description": "Odoo ERP API for Laravel",
     "keywords": ["odoo","laravel","erp","package"],
     "license": "MIT",
     "authors": [
         {
-            "name": "Eduardo Marcos",
-            "email": "edujugon@gmail.com"
+            "name": "Henrique Barbosa",
+            "email": "henrique@dootix.com"
         }
     ],
     "autoload": {
@@ -20,10 +20,10 @@
     },
     "minimum-stability": "dev",
     "require": {
-        "php": "^5.6||^7.0",
-        "illuminate/support": "^5.1||^6.0||^7.0||^8.0"
+        "php": "^8.0",
+        "illuminate/support": "^9.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8||^8.0"
+        "phpunit/phpunit": "~4.8||^9.0"
     }
 }
